--- a/css/style.css
+++ b/css/style.css
@@ -1,43 +1,48 @@
 /*
-
 Template 2077 Modern Town
 
 http://www.tooplate.com/view/2077-modern-town
-
 */
+
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
 
 /* Body 
 ------------------------------------- */
 body {
-		background: #ffffff;
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 400;
-    position: relative;
+  background: #ffffff;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
+  position: relative;
 }
 
-html,body {
-      width: 100%;
-     overflow-x: hidden;
-  }
+html,
+body {
+  width: 100%;
+  overflow-x: hidden;
+}
 
 .post-masonry img {
-    width: 100%;
-    display: block;
+  width: 100%;
+  display: block;
 }
 
-/* Typography
-------------------------------------- */
-h1,h2,h3,h4,h5 {
+/* Typography */
+h1,
+h2,
+h3,
+h4,
+h5 {
   font-weight: bold;
 }
 
 h1 {
+  color: #ffffff;
   font-size: 62px;
   line-height: 72px;
 }
 
 h2 {
-  color: #323232;
+  color: #030303; /*тект снизу*/
   font-size: 26px;
   line-height: 42px;
   letter-spacing: 1px;
@@ -45,16 +50,14 @@ h2 {
 }
 
 h3 {
-  color: #ffa400;
+  color: #89eff7; /* Original color */
   font-size: 16px;
-  letter-spacing: 26px;
   letter-spacing: 2px;
 }
 
 h5 {
-  color: #ffa400;
+  color: #31bdb1;
   line-height: 28px;
-  letter-spacing: 2px;
 }
 
 p {
@@ -63,80 +66,28 @@ p {
   line-height: 32px;
 }
 
-
-
 /* All Section styles
 ------------------------------------- */
-#testimonial, #blog, #counter, #contact {
-   	padding-top: 120px;
-  	padding-bottom: 120px;
+#testimonial,
+#blog,
+#counter,
+#contact {
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 
 #about h3 {
-  	padding-bottom: 12px;
+  padding-bottom: 12px;
 }
 
 .parallax-section {
-  	background-attachment: fixed !important;
-  	background-size: cover !important;
+  background-attachment: fixed !important;
+  background-size: cover !important;
 }
 
-
-/* navigation styles
-/* ========================================== */
-.navbar-default {
-    background: #fff;
-    border: none;
-    box-shadow: 0px 2px 8px 0px rgba(50, 50, 50, 0.04);
-    margin: 0 !important;
-  }
-.navbar-default .navbar-brand {
-  font-size: 20px;
-  font-weight: bold;
-  margin: 0;
-  }
-.navbar-default li {
-  margin: 15px 20px;
-}
-.navbar-default .navbar-nav li a {
-    color: #303030;
-    font-size: 12px;
-    font-weight: bold;
-    padding: 0px;
-  }
-.navbar-default .navbar-nav li a:hover {
-    color: #ffa400;
-  }
-.navbar-default .navbar-nav > li > a:hover,
-.navbar-default .navbar-nav > li > a:focus {
-  color: #303030;
-  background-color: transparent;
-}
-.navbar-default .navbar-nav > .active > a,
-.navbar-default .navbar-nav > .active > a:hover,
-.navbar-default .navbar-nav > .active > a:focus {
-  color: #ffa400;
-  background-color: transparent;
-}
-.navbar-default .navbar-toggle {
-     border: none;
-     padding-top: 12px;
-  }
-.navbar-default .navbar-toggle .icon-bar {
-    background: #ffa400;
-    border-color: transparent;
-  }
-.navbar-default .navbar-toggle:hover,
-.navbar-default .navbar-toggle:focus { 
-  background-color: transparent;
-}
-
-
-
-/* home section styles
-/* ========================================== */
+/* home section styles */
 #home {
-  background: url('../images/home-bg.jpg') 50% 0 repeat-y fixed;
+  background: url('../images/export.jpeg') 50% 0 repeat-y fixed;
   -webkit-background-size: cover;
   background-size: cover;
   background-position: center center;
@@ -146,26 +97,26 @@ p {
   display: flex;
   -webkit-box-align: center;
   -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   height: 100vh;
   text-align: center;
 }
 
 #home .btn-danger {
-  background: #ffa400 !important;
+  background: #76cbd1 !important;
   margin-right: 20px;
 }
 
 #home .btn-danger:hover {
-  background: #ffc400 !important;
+  background: #000000 !important;
 }
 
 #home .btn {
   background: #000000;
   border-color: transparent;
   color: #ffffff;
-  font-size: 12px;
+  font-size: 15px;
   font-weight: bold;
   padding: 14px 52px;
   margin-top: 40px;
@@ -173,12 +124,10 @@ p {
 }
 
 #home .btn:hover {
-  background: #ffa400;
+  background: #76cbd1;
 }
 
-
-/* testimonial section styles
-/* ========================================== */
+/* testimonial section styles */
 #testimonial .item {
   text-align: center;
   display: block;
@@ -190,75 +139,40 @@ p {
   display: inline-block;
 }
 
-/* about section styles
-/* ========================================== */
+/* about section styles */
 #about .container {
-  	width: 100%;
-  	padding: 0px;
-  	margin: 0px;
+  width: 100%;
+  padding: 0px;
+  margin: 0px;
 }
 
 #about .col-md-6 {
-	padding: 0;
+  padding: 0;
 }
 
 #about .about-des {
-  	padding: 65px;
+  padding: 65px;
 }
 
 #about .about-des h3 {
-	font-size: 26px;
+  font-size: 26px;
+  text-align: justify;
 }
 
 #about .about-des h4 {
-	font-size: 20px;
+  font-size: 20px;
+  text-align: justify;
 }
 
 #about .about-des p {
-	font-size: 16px;
-	line-height: 32px;
+  text-align: justify;
+  font-size: 16px;
+  line-height: 32px;
 }
 
-
-/* blog section styles
-/* ========================================== */
-#blog h2, #blog h4 {
-  text-align: center;
-}
-
-#blog h2 {
-  padding-bottom: 12px;
-  font-size: 32px;
-}
-
-#blog h4 {
-  padding-bottom: 32px;
-  letter-spacing: 0.9px;
-}
-
-#blog p {
-	padding-top: 10px;
-	font-size: 14px;
-	line-height: 28px;
-}
-
-#blog .blog-wrapper {
-  background: #ffffff;
-  border: 1px solid #f0f0f0;
-  padding: 20px;
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
-
-#blog .blog-wrapper h3 a {
-  color: #000000;
-}
-
-
-/* Counter section styles
-/* ========================================== */
+/* Counter section styles */
 #counter {
-   background: url('../images/counter-bg.jpg') 50% 0 repeat-y fixed;
+  background: url('../images/counter-bg.jpg') 50% 0 repeat-y fixed;
   -webkit-background-size: cover;
   background-size: cover;
   background-position: center;
@@ -277,9 +191,7 @@ p {
   letter-spacing: 2px;
 }
 
-
-/* contact section styles
-/* ========================================== */
+/* contact section styles */
 #contact {
   background: url('../images/contact-bg.jpg') 50% 0 repeat-y fixed;
   -webkit-background-size: cover;
@@ -301,7 +213,7 @@ p {
 
 #contact input[type="submit"] {
   background: #000000;
-  border:none;
+  border: none;
   border-radius: 4px;
   font-weight: bold;
   letter-spacing: 1px;
@@ -310,22 +222,24 @@ p {
 }
 
 #contact input[type="submit"]:hover {
-  background: #ffa400;
+  background: #76cbd1;
 }
 
 .form-control::-moz-placeholder {
   color: #ffffff;
   opacity: 1;
 }
+
 .form-control:-ms-input-placeholder {
   color: #ffffff;
 }
+
 .form-control::-webkit-input-placeholder {
   color: #ffffff;
 }
 
 #contact .contact-detail {
-  background: rgba(250,250,250,0.75);
+  background: rgba(250, 250, 250, 0.75);
   padding: 34px 10px 34px 60px;
 }
 
@@ -337,9 +251,7 @@ p {
   padding-bottom: 10px;
 }
 
-
-/* footer section styles
-/* ========================================== */
+/* footer section styles */
 footer {
   padding-top: 80px;
   padding-bottom: 50px;
@@ -371,10 +283,12 @@ footer a:hover {
   padding: 0;
   margin: 0;
 }
+
 .social-icon li {
   list-style: none;
   display: inline-block;
 }
+
 .social-icon li a {
   background: #3c3c3c;
   border-radius: 100%;
@@ -388,31 +302,148 @@ footer a:hover {
   transition: all 0.4s ease-in-out;
   margin-right: 2px;
 }
+
 .social-icon li a:hover {
   background: #ffa400;
 }
 
-
-
-@media (max-width: 1280px) {
-	#about .about-des {
-		padding: 40px;
-	}
-	#about .about-des h3 {
-		font-size: 20px;
-	}
-	
-	#about .about-des h4 {
-		font-size: 16px;
-	}
-	
-	#about .about-des p {
-		font-size: 13px;
-		line-height: 24px;
-	}
+/* Button Styles */
+#buttons {
+  text-align: center;
+  margin-top: 60px;
 }
-/* mobile responsive section styles
-/* ========================================== */
+
+a {
+  position: relative;
+  display: inline-block;
+  padding: 25px 30px;
+  margin: 40px 0;
+  color: #03e9f4;
+  text-decoration: none;
+  text-transform: uppercase;
+  transition: 0.5s;
+  letter-spacing: 4px;
+  overflow: hidden;
+  margin-right: 50px; /* Adjust margin as per your layout */
+}
+
+a:hover {
+  background: #03e9f4;
+  color: #050801;
+  box-shadow: 0 0 5px #03e9f4,
+              0 0 25px #03e9f4,
+              0 0 50px #03e9f4,
+              0 0 200px #03e9f4;
+  -webkit-box-reflect: below 1px linear-gradient(transparent, #0005);
+}
+
+a span {
+  position: absolute;
+  display: block;
+}
+
+a span:nth-child(1) {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(90deg, transparent, #03e9f4);
+  animation: animate1 1s linear infinite;
+}
+
+@keyframes animate1 {
+  0% {
+    left: -100%;
+  }
+  50%,
+  100% {
+    left: 100%;
+  }
+}
+
+a span:nth-child(2) {
+  top: -100%;
+  right: 0;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(180deg, transparent, #03e9f4);
+  animation: animate2 1s linear infinite;
+  animation-delay: 0.25s;
+}
+
+@keyframes animate2 {
+  0% {
+    top: -100%;
+  }
+  50%,
+  100% {
+    top: 100%;
+  }
+}
+
+a span:nth-child(3) {
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(270deg, transparent, #03e9f4);
+  animation: animate3 1s linear infinite;
+  animation-delay: 0.50s;
+}
+
+@keyframes animate3 {
+  0% {
+    right: -100%;
+  }
+  50%,
+  100% {
+    right: 100%;
+  }
+}
+
+a span:nth-child(4) {
+  bottom: -100%;
+  left: 0;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(360deg, transparent, #03e9f4);
+  animation: animate4 1s linear infinite;
+  animation-delay: 0.75s;
+}
+
+@keyframes animate4 {
+  0% {
+    bottom: -100%;
+  }
+  50%,
+  100% {
+    bottom: 100%;
+  }
+}
+
+/* Media Queries */
+@media (max-width: 1280px) {
+  #about .about-des {
+    padding: 40px; /* Убираем внутренние отступы */
+    width: 100%; /* Занимаем всю доступную ширину */
+  }
+
+  #about .about-des h3 {
+    font-size: 20px;
+  }
+
+  #about .about-des h4 {
+    font-size: 16px;
+  }
+
+  #about .about-des p {
+    font-size: 13px;
+    line-height: 20px;
+    text-align: justify; /* Выравнивание текста по ширине блока */
+    margin: 0; /* Убираем внешние отступы у параграфов */
+  }
+}
+
 @media (max-width: 768px) {
   h1 {
     font-size: 53px;
@@ -421,7 +452,6 @@ footer a:hover {
     padding-top: 20px;
     padding-bottom: 20px;
   }
-  
 }
 
 @media (max-width: 650px) {
