--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,8 @@ body {
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
   position: relative;
+  margin: 0; /* Добавлено для удаления внешних отступов */
+  padding: 0; /* Добавлено для удаления внешних отступов */
 }
 
 html,
@@ -35,13 +37,13 @@ h1.gradient-all {
   text-align: center;
 }
 
-
 h2 {
   color: #030303;
   font-size: 26px;
   line-height: 42px;
   letter-spacing: 1px;
   padding-bottom: 12px;
+  text-align: center;
 }
 
 h3 {
@@ -308,12 +310,6 @@ footer a:hover {
   width: 100%;
 }
 
-#blog .row {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-
 #blog .post-masonry {
   width: calc(50% - 15px); /* 15px is half of the column gap */
   margin-bottom: 30px;
@@ -337,53 +333,42 @@ footer a:hover {
   border-radius: 8px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   overflow: hidden;
-  height: 100%; /* Установка одинаковой высоты для карточек блога */
   display: flex;
   flex-direction: column;
 }
 
-#blog .blog-wrapper img {
-  width: 100%;
-  height: 450px; /* Высота изображения, адаптированная под меньшие экраны */
-  object-fit: cover;
-  border-top-left-radius: 8px;
-  border-top-right-radius: 8px;
-}
-
-#blog .blog-wrapper .blog-inner {
+#blog .blog-inner {
   padding: 20px;
   display: flex;
   flex-direction: column;
-  height: 100%; /* Гарантия заполнения содержимого по высоте */
 }
 
 #blog .blog-wrapper h3 {
   font-size: 20px;
   margin-top: 0;
-  margin-bottom: 10px; /* Регулировка промежутка */
+  margin-bottom: 10px;
 }
 
 #blog .blog-wrapper p {
   color: #707070;
   margin-top: 0;
-  flex-grow: 1; /* Адаптивность текста */
 }
 
 #blog .blog-wrapper .btn-buy {
-  background-color: #9cebd5;
+  background-color: #8dffdf;
   color: #ffffff;
   padding: 10px 20px;
   border-radius: 5px;
   text-decoration: none;
   font-family: 'Raleway', sans-serif;
-  font-size: 14px;
+  font-size: 18px;
   font-weight: 500;
   transition: background-color 0.3s ease;
   text-transform: uppercase;
-  margin-top: auto; 
-  align-self: flex-end; 
-  margin-right: 10px; 
-  margin-bottom: 10px; 
+  margin-top: auto;
+  align-self: flex-end;
+  margin-right: 10px;
+  margin-bottom: 10px;
 }
 
 #blog .blog-wrapper .btn-buy:hover {
@@ -391,7 +376,14 @@ footer a:hover {
 }
 
 @media (max-width: 768px) {
-  #blog .blog-wrapper img {
-    height: 250px; /* Изменение высоты изображения на меньших экранах */
+  #blog .owl-carousel .item img {
+    height: auto; /* Reset height to auto for smaller screens */
+  }
+}
+
+@media (max-width: 768px) {
+  #blog .owl-carousel .owl-item {
+    width: 100% !important;
+    max-width: 100% !important;
   }
 }
